# cellshape-cluster

./: .bumpversion.cfg  .gitignore  CITATION.cff  README.md  main.py  main_pl.py  setup.cfg  setup.py
.github/workflows/: test_and_deploy.yml
cellshape_cluster/: __init__.py  clustering_layer.py  deep_embedded_clustering.py  lightning_deep_embedded_clustering.py  main.py  reports.py  training_example.ipynb  training_functions.py
cellshape_cluster/helpers/: check_tolerance.py  distributions.py  kmeans.py  reports.py
docs/: CONTRIBUTING.md
docs/notebooks/: training_example.ipynb
