[metadata]
name = cellshape-cluster
version = 0.0.1
author = Matt DeVries, Adam Tyson
author_email = matthew.devries.13@gmail.com
url = https://github.com/Sentinal4D/cellshape-cluster
description = Cell shape analysis using deep embedded clustering
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
project_urls =
    Bug Tracker = https://github.com/Sentinal4D/cellshape-cluster/issues
    Documentation = https://github.com/Sentinal4D/cellshape-cluster#README.md
    Source Code = https://github.com/Sentinal4D/cellshape-cluster
    User Support = https://github.com/Sentinal4D/cellshape-cluster/issues

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
install_requires =
    torch
    tqdm
    numpy
    scikit-learn

[options.packages.find]
where = cellshape_cluster
exclude = test*

[options.extras_require]
dev =
	black
	pytest
	pytest-cov
	bump2version
	pre-commit
	flake8
	coverage

[flake8]
ignore = E203, W503
max-line-length = 79
exclude = __init__.py,build,.eggs
